--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-dnspython3==1.12.0
-paramiko==1.15.2
-requests==2.7.0
-Django==1.8.4
-sqlalchemy==1.0.8
+dnspython3>=1.12.0
+paramiko>=1.15.2
+requests>=2.7.0
+sqlalchemy>=1.0.8
+Flask>=0.10.1
+Flask-User>=0.6
+Flask-Login>=0.3.0
+Flask-Mail>=0.9.1
+Flask-SQLAlchemy
+passlib>=1.6.5
+pycrypto>=2.6.1
+py-bcrypt>=0.4
+blinker>=1.3
+Flask-Babel>=0.9
+speaklater>=1.3
