--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Flask-Mail>=0.9.1
 Flask-SQLAlchemy
 passlib>=1.6.5
 pycrypto>=2.6.1
-py-bcrypt>=0.4
+py-bcrypt==0.4
 blinker>=1.3
 Flask-Babel>=0.9
 speaklater>=1.3
