--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Flask>=0.10.1
 Flask-User>=0.6
 Flask-Login>=0.3.0
 Flask-Mail>=0.9.1
-Flask-SQLAlchemy
+Flask-SQLAlchemy==2.0
 passlib>=1.6.5
 pycrypto>=2.6.1
 py-bcrypt==0.4
